Standardize ketamine therapy tone across all pages - educational, discussion-focused, non-promotional language

--- a/anxiety.html
+++ b/anxiety.html
@@ -366,6 +366,15 @@
                         
                         <p>Whether you're looking for anxiety treatment in Provo, anxiety therapy in Orem, or anxiety care in Lehi, Allen Psychiatry is here to help. <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" target="_blank" onclick="gtag('event', 'schedule_appointment_click', {'event_category': 'Conversion', 'event_label': 'Schedule Link - Anxiety Inline Text', 'value': 1});">Schedule your appointment today</a>.</p>
                     </div>
+
+                    <h3>Exploring Additional Treatment Options</h3>
+                    <p>If you've tried multiple treatment approaches for anxiety without sufficient relief, there are additional options that can be explored with Dr. Allen.</p>
+                    
+                    <div class="clinical-callout" style="background: #f8f9fa; border-left: 4px solid var(--primary); padding: 25px; margin: 30px 0;">
+                        <h4 style="color: var(--primary); margin-top: 0;">Exploring Additional Treatment Options</h4>
+                        <p><strong>Ketamine Therapy:</strong> Given the recent attention ketamine therapy has received for treatment-resistant depression, this may be something you have questions about. Dr. Allen is available to discuss ketamine therapy with you, explain how it works differently than traditional antidepressants, and help you understand whether it might be a beneficial approach for your specific situation. This is one of many treatment considerations that can be explored during your consultation.</p>
+                        <p style="margin-top: 15px;"><a href="/ketamine-therapy" class="btn btn-outline" style="display: inline-block;">If you would like to learn more about Ketamine treatment</a></p>
+                    </div>
                 </div>
             </div>
         </section>
