--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="Claude-Web" content="noindex, nofollow">
     <meta name="PerplexityBot" content="noindex, nofollow">
     <title>Allen Psychiatry | Provo & Orem Psychiatrist | Accepting New Patients | Depression, Anxiety, ADHD Treatment</title>
-    <meta name="description" content="Accepting New Patients! Expert depression, anxiety & ADHD treatment in Provo, Orem & Utah County. Ketamine therapy for treatment-resistant depression. Telehealth available. Call (385) 504-1334">
+    <meta name="description" content="Accepting New Patients! Expert depression, anxiety & ADHD treatment in Provo, Orem & Utah County. Treatment-resistant depression options available. Telehealth available. Call (385) 504-1334">
     <meta name="keywords" content="Allen Psychiatry, Allen Mental Health, Allen Psychiatric Services, Allen Mental Wellness, psychiatric services Provo, mental health care Utah County, psychiatrist Orem, mental health clinic near me, psychiatric services Lehi, mental health Spanish Fork, psychiatric care American Fork, mental wellness Springville, behavioral health Pleasant Grove, psychiatric services Payson, mental health Saratoga Springs, rural mental health Utah, telehealth psychiatry Utah, Sevier County psychiatric care, mental health treatment, psychiatric evaluation, mental wellness, behavioral health, holistic psychiatry, compassionate mental health care, mental health support, anxiety treatment, depression treatment, medication management, mental health counseling, psychiatric consultation, mental health professionals, local psychiatrist, Provo mental health, Orem mental health, Lehi mental health, Spanish Fork mental health, American Fork mental health, Springville mental health, Pleasant Grove mental health, Payson mental health, Saratoga Springs mental health, Eagle Mountain mental health, Lindon mental health, Mapleton mental health, Highland mental health, Alpine mental health, Salem mental health, Vineyard mental health, Cedar Hills mental health, Utah County psychiatric care, Sevier County psychiatric care">
     
     <!-- Open Graph / Facebook -->
@@ -481,7 +481,7 @@
             <div class="hero-content">
                 <h1>Expert Depression, Anxiety & ADHD Treatment in Provo & Utah County</h1>
                 <p style="font-size: 1.2em; font-weight: 600; color: var(--primary); margin-bottom: 15px;">✓ Accepting New Patients</p>
-                <p>Compassionate, evidence-based mental health services including ketamine therapy for treatment-resistant depression. Telehealth available for rural communities.</p>
+                <p>Compassionate, evidence-based mental health services. Telehealth available for rural communities.</p>
                 <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" class="btn" target="_blank" onclick="gtag('event', 'schedule_appointment_click', {'event_category': 'Conversion', 'event_label': 'Schedule Button - Hero', 'value': 1});">Schedule an Appointment</a>
             </div>
         </div>
@@ -492,7 +492,7 @@
         <div class="container">
             <div class="page-header">
                 <h2>Our Services</h2>
-                <p><strong>Allen Psychiatry is currently accepting new patients</strong> throughout Provo, Orem, Lehi, American Fork, and rural Utah communities. We provide expert treatment for depression, anxiety, ADHD, PTSD, and treatment-resistant conditions, including innovative ketamine therapy. Telepsychiatry available for convenient access.</p>
+                <p><strong>Allen Psychiatry is currently accepting new patients</strong> throughout Provo, Orem, Lehi, American Fork, and rural Utah communities. We provide expert treatment for depression, anxiety, ADHD, PTSD, and treatment-resistant conditions. Telepsychiatry available for convenient access.</p>
             </div>
 
             <div class="services-grid">
@@ -560,8 +560,8 @@
 
             <!-- Educational Resource Section -->
             <div style="margin-top: 50px; padding: 30px; background: #f8f9fa; border-radius: var(--border-radius); border-left: 4px solid var(--primary);">
-                <h3 style="color: var(--primary); margin-top: 0;">Exploring Treatment Options</h3>
-                <p>If you've tried multiple antidepressant medications without sufficient relief, you may be interested in learning about additional treatment options. Ketamine therapy is one approach that can be explored with Dr. Allen for treatment-resistant depression.</p>
+                <h3 style="color: var(--primary); margin-top: 0;">Exploring Additional Treatment Options</h3>
+                <p><strong>Ketamine Therapy:</strong> Given the recent attention ketamine therapy has received for treatment-resistant depression, this may be something you have questions about. Dr. Allen is available to discuss ketamine therapy with you, explain how it works differently than traditional antidepressants, and help you understand whether it might be a beneficial approach for your specific situation. This is one of many treatment considerations that can be explored during your consultation.</p>
                 <p style="margin-top: 15px;"><a href="/ketamine-therapy" class="btn btn-outline" style="display: inline-block;">If you would like to learn more about Ketamine treatment</a></p>
             </div>
 
@@ -641,7 +641,7 @@
                     </p>
                     <p>
                         <strong>Email:</strong><br>
-                        <a href="mailto:info@allenpsychiatry.net" onclick="gtag('event', 'email_click', {'event_category': 'Conversion', 'event_label': 'Email - Footer', 'value': 1});" style="color: inherit; text-decoration: none;">info@allenpsychiatry.net</a>
+                        <a href="mailto:info@allenpsychiatry.net" onclick="if(typeof gtag!=='undefined'){gtag('event','email_click',{'event_category':'Conversion','event_label':'Email - Footer','value':1});}return true;" style="color: inherit; text-decoration: none;">info@allenpsychiatry.net</a>
                     </p>
                 </div>
             </div>
@@ -726,7 +726,7 @@
                     <ul>
                         <li>Reply "STOP" to any message</li>
                         <li>Call us at (801) 555-0123</li>
-                        <li>Email us at <a href="mailto:info@allenpsychiatry.net" onclick="gtag('event', 'email_click', {'event_category': 'Conversion', 'event_label': 'Email - Footer Link', 'value': 1});" style="color: inherit; text-decoration: underline;">info@allenpsychiatry.net</a></li>
+                        <li>Email us at <a href="mailto:info@allenpsychiatry.net" onclick="if(typeof gtag!=='undefined'){gtag('event','email_click',{'event_category':'Conversion','event_label':'Email - Footer Link','value':1});}return true;" style="color: inherit; text-decoration: underline;">info@allenpsychiatry.net</a></li>
                     </ul>
 
                     <h5>Contact Information</h5>
@@ -735,7 +735,7 @@
                     3311 North University Ave, Ste 275<br>
                     Provo, UT 84604<br>
                     Phone: (801) 555-0123<br>
-                    Email: <a href="mailto:info@allenpsychiatry.net" onclick="gtag('event', 'email_click', {'event_category': 'Conversion', 'event_label': 'Email - Footer Text', 'value': 1});" style="color: inherit; text-decoration: underline;">info@allenpsychiatry.net</a></p>
+                    Email: <a href="mailto:info@allenpsychiatry.net" onclick="if(typeof gtag!=='undefined'){gtag('event','email_click',{'event_category':'Conversion','event_label':'Email - Footer Text','value':1});}return true;" style="color: inherit; text-decoration: underline;">info@allenpsychiatry.net</a></p>
 
                     <p style="margin-top: 20px; padding: 15px; background: #f0f8ff; border-left: 4px solid var(--primary); border-radius: 4px;">
                         <strong>Note:</strong> This policy applies only to SMS communications. For our complete privacy policy regarding medical records and other information, please contact our office.
