--- a/ptsd.html
+++ b/ptsd.html
@@ -357,11 +357,11 @@
                     </div>
 
                     <h3>Exploring Additional Treatment Options</h3>
-                    <p>If you've tried multiple treatment approaches for PTSD without sufficient relief, there are additional options that can be explored with Dr. Allen. For some individuals with treatment-resistant PTSD, ketamine therapy is one option that may be considered as part of a comprehensive treatment plan.</p>
+                    <p>If you've tried multiple treatment approaches for PTSD without sufficient relief, there are additional options that can be explored with Dr. Allen.</p>
                     
                     <div class="clinical-callout" style="background: #f8f9fa; border-left: 4px solid var(--primary); padding: 25px; margin: 30px 0;">
-                        <h4 style="color: var(--primary); margin-top: 0;">Understanding Your Treatment Options</h4>
-                        <p><strong>Ketamine Therapy:</strong> For individuals with treatment-resistant PTSD, ketamine therapy is one option that can be explored with Dr. Allen. While primarily researched for treatment-resistant depression, emerging research suggests ketamine may also be helpful for some individuals with PTSD, particularly when traditional treatments haven't provided sufficient relief. However, it's just one of many treatment options available, and Dr. Allen can help you understand whether it or other approaches might be appropriate for your specific situation.</p>
+                        <h4 style="color: var(--primary); margin-top: 0;">Exploring Additional Treatment Options</h4>
+                        <p><strong>Ketamine Therapy:</strong> Given the recent attention ketamine therapy has received for treatment-resistant depression, this may be something you have questions about. Dr. Allen is available to discuss ketamine therapy with you, explain how it works differently than traditional antidepressants, and help you understand whether it might be a beneficial approach for your specific situation. This is one of many treatment considerations that can be explored during your consultation.</p>
                         <p style="margin-top: 15px;"><a href="/ketamine-therapy" class="btn btn-outline" style="display: inline-block;">If you would like to learn more about Ketamine treatment</a></p>
                     </div>
 
