Fact-check fixes: Remove promotional language, soften absolute claims (rapid relief, highly effective, excellent prognosis)

--- a/anxiety.html
+++ b/anxiety.html
@@ -287,8 +287,8 @@
                         <ul>
                             <li><strong>Prevalence:</strong> Affects approximately 19.1% of adults in the United States annually (Kessler et al., 2012, Archives of General Psychiatry)</li>
                             <li><strong>Onset:</strong> Can develop at any age, often triggered by life events or stress (Bandelow & Michaelis, 2015, Nature Reviews Disease Primers)</li>
-                            <li><strong>Treatment:</strong> Highly effective with proper diagnosis and management (Baldwin et al., 2014, Journal of Psychopharmacology)</li>
-                            <li><strong>Prognosis:</strong> Excellent with appropriate treatment and lifestyle modifications (Hofmann et al., 2012, Annual Review of Clinical Psychology)</li>
+                            <li><strong>Treatment:</strong> Can be effective with proper diagnosis and management (Baldwin et al., 2014, Journal of Psychopharmacology)</li>
+                            <li><strong>Prognosis:</strong> Often positive with appropriate treatment and lifestyle modifications (Hofmann et al., 2012, Annual Review of Clinical Psychology)</li>
                         </ul>
                         <div class="citation-note">
                             <small>*Statistics based on peer-reviewed medical literature</small>
