--- a/depression.html
+++ b/depression.html
@@ -291,8 +291,8 @@
                         <ul>
                             <li><strong>Prevalence:</strong> Affects approximately 7.1% of adults in the United States annually (Hasin et al., 2018, JAMA Psychiatry)</li>
                             <li><strong>Onset:</strong> Can occur at any age, with peak onset in early adulthood (Kessler et al., 2005, Archives of General Psychiatry)</li>
-                            <li><strong>Treatment:</strong> Highly effective with proper diagnosis and management (Cuijpers et al., 2013, Annual Review of Clinical Psychology)</li>
-                            <li><strong>Prognosis:</strong> Excellent with appropriate treatment and support (Rush et al., 2006, New England Journal of Medicine)</li>
+                            <li><strong>Treatment:</strong> Can be effective with proper diagnosis and management (Cuijpers et al., 2013, Annual Review of Clinical Psychology)</li>
+                            <li><strong>Prognosis:</strong> Often positive with appropriate treatment and support (Rush et al., 2006, New England Journal of Medicine)</li>
                         </ul>
                         <div class="citation-note">
                             <small>*Statistics based on peer-reviewed medical literature</small>
