--- a/ketamine-therapy.html
+++ b/ketamine-therapy.html
@@ -7,7 +7,7 @@
     <!-- Primary Meta Tags -->
     <title>Ketamine Therapy Utah | Treatment-Resistant Depression | Allen Psychiatry</title>
     <meta name="title" content="Ketamine Therapy Utah | Treatment-Resistant Depression | Allen Psychiatry">
-    <meta name="description" content="Ketamine therapy for treatment-resistant depression in Provo & Utah County. Rapid relief when traditional antidepressants haven't worked. Accepting new patients. Call (385) 504-1334">
+    <meta name="description" content="Ketamine therapy for treatment-resistant depression in Provo & Utah County. May provide relief when traditional antidepressants haven't worked. Accepting new patients. Call (385) 504-1334">
     <meta name="keywords" content="Allen Psychiatry, ketamine therapy Utah, ketamine treatment Provo, treatment-resistant depression, ketamine for depression, ketamine therapy Orem, ketamine treatment Utah County, treatment-resistant depression Utah, ketamine infusion therapy, depression treatment Provo, innovative mental health treatment, Allen Mental Health">
     <meta name="author" content="Dr. Todd Allen, Allen Psychiatry">
     <meta name="robots" content="index, follow">
