Fix remaining absolute language claims in PTSD and ADHD pages (highly effective, excellent prognosis)

--- a/adhd.html
+++ b/adhd.html
@@ -316,8 +316,8 @@
                         <ul>
                             <li><strong>Prevalence:</strong> Affects approximately 4.4% of adults in the United States (Kessler et al., 2006, American Journal of Psychiatry)</li>
                             <li><strong>Onset:</strong> Typically begins in childhood but may not be diagnosed until adulthood (Barkley, 2015, Journal of Attention Disorders)</li>
-                            <li><strong>Treatment:</strong> Highly effective with proper diagnosis and management (Faraone et al., 2015, Nature Reviews Disease Primers)</li>
-                            <li><strong>Prognosis:</strong> Excellent with appropriate treatment and support (Biederman et al., 2012, Journal of Clinical Psychiatry)</li>
+                            <li><strong>Treatment:</strong> Can be effective with proper diagnosis and management (Faraone et al., 2015, Nature Reviews Disease Primers)</li>
+                            <li><strong>Prognosis:</strong> Often positive with appropriate treatment and support (Biederman et al., 2012, Journal of Clinical Psychiatry)</li>
                         </ul>
                         <div class="citation-note">
                             <small>*Statistics based on peer-reviewed medical literature</small>
