--- a/ptsd.html
+++ b/ptsd.html
@@ -292,8 +292,8 @@
                         <ul>
                             <li><strong>Prevalence:</strong> Affects approximately 3.6% of adults in the United States annually (Kessler et al., 2017, JAMA Psychiatry)</li>
                             <li><strong>Onset:</strong> Can develop immediately after trauma or months/years later (American Psychiatric Association, 2013, DSM-5)</li>
-                            <li><strong>Treatment:</strong> Highly effective with evidence-based approaches (Watts et al., 2013, Journal of Clinical Psychiatry)</li>
-                            <li><strong>Prognosis:</strong> Excellent with proper treatment and support (Steenkamp et al., 2015, JAMA Psychiatry)</li>
+                            <li><strong>Treatment:</strong> Can be effective with evidence-based approaches (Watts et al., 2013, Journal of Clinical Psychiatry)</li>
+                            <li><strong>Prognosis:</strong> Often positive with proper treatment and support (Steenkamp et al., 2015, JAMA Psychiatry)</li>
                         </ul>
                         <div class="citation-note">
                             <small>*Statistics based on peer-reviewed medical literature</small>
