--- a/ketamine-therapy.html
+++ b/ketamine-therapy.html
@@ -158,15 +158,15 @@
                 <div class="service-content">
                     <div class="clinical-callout">
                         <h2>Ketamine Therapy Information</h2>
-                        <p>Ketamine therapy is a treatment option that has been studied for treatment-resistant depression and may be considered for other mental health conditions when traditional treatments haven't provided sufficient relief. This page provides brief educational information to help you understand this treatment option.</p>
+                        <p>Ketamine therapy is a treatment option that has been studied for treatment-resistant depression, PTSD, and anxiety disorders when traditional treatments haven't provided sufficient relief. This page provides brief educational information to help you understand this treatment option.</p>
                     </div>
 
                     <p>If you're considering ketamine therapy, please <strong>talk to Dr. Allen</strong> to discuss whether this treatment approach might be appropriate for your situation. Call <strong><a href="tel:+13855041334" onclick="gtag('event', 'phone_call_click', {'event_category': 'Conversion', 'event_label': 'Phone Call - Inline Text', 'value': 1});" style="color: inherit; text-decoration: none;">(385) 504-1334</a></strong> or <a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" target="_blank" onclick="gtag('event', 'schedule_appointment_click', {'event_category': 'Conversion', 'event_label': 'Schedule Link - Inline Text', 'value': 1});">schedule an appointment online</a> to speak with Dr. Allen about ketamine treatment.</p>
 
                     <h3>What Is Ketamine Therapy?</h3>
-                    <p>Ketamine therapy is a treatment approach that has been researched for treatment-resistant depression. It works differently from traditional antidepressants by targeting the brain's glutamate system rather than serotonin or norepinephrine pathways. This different mechanism of action may provide relief when other treatments haven't been sufficient.</p>
+                    <p>Ketamine therapy is a treatment approach that has been researched for treatment-resistant depression, PTSD, and anxiety disorders. It works differently from traditional antidepressants by targeting the brain's glutamate system rather than serotonin or norepinephrine pathways. This different mechanism of action may provide relief when other treatments haven't been sufficient.</p>
                     
-                    <p>Ketamine therapy may be considered for treatment-resistant depression, PTSD, anxiety disorders, and other mental health conditions. However, it's not appropriate for everyone and requires a thorough evaluation.</p>
+                    <p><strong>Important:</strong> Ketamine therapy has been researched for treatment-resistant depression, PTSD, and anxiety disorders. There is currently no clinical research demonstrating ketamine's effectiveness for ADHD. Ketamine is not a treatment option for ADHD. However, it's not appropriate for everyone and requires a thorough evaluation.</p>
 
                     <h3>Who Might Consider Ketamine Therapy?</h3>
                     <p>You may want to discuss ketamine therapy with Dr. Allen if you:</p>
