Add explicit statement that ketamine is NOT for ADHD in 'Who Might Consider' section

--- a/ketamine-therapy.html
+++ b/ketamine-therapy.html
@@ -173,11 +173,13 @@
                     <ul>
                         <li>Have tried multiple medications without significant improvement</li>
                         <li>Continue to experience symptoms despite treatment</li>
-                        <li>Have treatment-resistant depression, PTSD, or anxiety</li>
-                        <li>Are interested in exploring alternative treatment approaches</li>
+                        <li>Have treatment-resistant depression, PTSD, or anxiety disorders</li>
+                        <li>Are interested in exploring alternative treatment approaches for these specific conditions</li>
                     </ul>
                     
-                    <p><strong>Important:</strong> Ketamine therapy is not appropriate for everyone. Dr. Allen will conduct a comprehensive evaluation to determine if ketamine therapy or other treatment approaches might be suitable for your specific situation.</p>
+                    <p><strong>Important:</strong> Ketamine therapy has been researched for treatment-resistant depression, PTSD, and anxiety disorders. There is currently no clinical research demonstrating ketamine's effectiveness for ADHD. Ketamine is not a treatment option for ADHD. If you have ADHD, Dr. Allen can discuss appropriate ADHD treatment options with you during your consultation.</p>
+                    
+                    <p>Ketamine therapy is not appropriate for everyone. Dr. Allen will conduct a comprehensive evaluation to determine if ketamine therapy or other treatment approaches might be suitable for your specific situation.</p>
 
                     <h3>What to Expect</h3>
                     <p>If you're considering ketamine therapy, Dr. Allen will discuss your mental health history, previous treatments, current symptoms, medical history, and treatment goals during your consultation. He will explain all available treatment options, including ketamine therapy, and help you understand whether it might be appropriate for your situation.</p>
