Update ketamine page headlines to reflect PTSD/Trauma has strongest evidence - update title, H1, and meta tags

--- a/ketamine-therapy.html
+++ b/ketamine-therapy.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Primary Meta Tags -->
-    <title>Ketamine Therapy Utah | Treatment-Resistant Depression | Allen Psychiatry</title>
-    <meta name="title" content="Ketamine Therapy Utah | Treatment-Resistant Depression | Allen Psychiatry">
-    <meta name="description" content="Ketamine therapy for treatment-resistant depression in Provo & Utah County. May provide relief when traditional antidepressants haven't worked. Accepting new patients. Call (385) 504-1334">
+    <title>Ketamine Therapy Utah | PTSD, Trauma & Treatment-Resistant Depression | Allen Psychiatry</title>
+    <meta name="title" content="Ketamine Therapy Utah | PTSD, Trauma & Treatment-Resistant Depression | Allen Psychiatry">
+    <meta name="description" content="Ketamine therapy for PTSD, trauma, and treatment-resistant depression in Provo & Utah County. Strongest research evidence for PTSD/trauma. Accepting new patients. Call (385) 504-1334">
     <meta name="keywords" content="Allen Psychiatry, ketamine therapy Utah, ketamine treatment Provo, treatment-resistant depression, ketamine for depression, ketamine therapy Orem, ketamine treatment Utah County, treatment-resistant depression Utah, ketamine infusion therapy, depression treatment Provo, innovative mental health treatment, Allen Mental Health">
     <meta name="author" content="Dr. Todd Allen, Allen Psychiatry">
     <meta name="robots" content="index, follow">
@@ -145,7 +145,7 @@
             <img src="assets/depression.jpg" alt="Ketamine therapy for treatment-resistant depression at Allen Psychiatry in Provo, Utah" class="hero-image">
         </picture>
         <div class="container">
-            <h1>Ketamine Therapy | Treatment-Resistant Depression</h1>
+            <h1>Ketamine Therapy | PTSD, Trauma & Treatment-Resistant Depression</h1>
             <p style="font-size: 1.1em; font-weight: 600; color: var(--primary); margin-bottom: 10px;">✓ Accepting New Patients</p>
             <p>Talk to Dr. Allen if you are considering Ketamine Treatment</p>
         </div>
