Add PTSD and trauma keywords to ketamine page meta tags

--- a/ketamine-therapy.html
+++ b/ketamine-therapy.html
@@ -8,7 +8,7 @@
     <title>Ketamine Therapy Utah | PTSD, Trauma & Treatment-Resistant Depression | Allen Psychiatry</title>
     <meta name="title" content="Ketamine Therapy Utah | PTSD, Trauma & Treatment-Resistant Depression | Allen Psychiatry">
     <meta name="description" content="Ketamine therapy for PTSD, trauma, and treatment-resistant depression in Provo & Utah County. Strongest research evidence for PTSD/trauma. Accepting new patients. Call (385) 504-1334">
-    <meta name="keywords" content="Allen Psychiatry, ketamine therapy Utah, ketamine treatment Provo, treatment-resistant depression, ketamine for depression, ketamine therapy Orem, ketamine treatment Utah County, treatment-resistant depression Utah, ketamine infusion therapy, depression treatment Provo, innovative mental health treatment, Allen Mental Health">
+    <meta name="keywords" content="Allen Psychiatry, ketamine therapy Utah, ketamine treatment Provo, ketamine for PTSD, ketamine for trauma, treatment-resistant depression, ketamine for depression, ketamine therapy Orem, ketamine treatment Utah County, PTSD treatment Utah, trauma treatment Utah, treatment-resistant depression Utah, ketamine infusion therapy, depression treatment Provo, innovative mental health treatment, Allen Mental Health">
     <meta name="author" content="Dr. Todd Allen, Allen Psychiatry">
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
