--- a/ketamine-therapy.html
+++ b/ketamine-therapy.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Primary Meta Tags -->
-    <title>Ketamine Therapy Utah | PTSD, Trauma & Treatment-Resistant Depression | Allen Psychiatry</title>
-    <meta name="title" content="Ketamine Therapy Utah | PTSD, Trauma & Treatment-Resistant Depression | Allen Psychiatry">
+    <title>Ketamine Therapy Utah | PTSD & Trauma Treatment | Treatment-Resistant Depression | Allen Psychiatry</title>
+    <meta name="title" content="Ketamine Therapy Utah | PTSD & Trauma Treatment | Treatment-Resistant Depression | Allen Psychiatry">
     <meta name="description" content="Ketamine therapy for PTSD, trauma, and treatment-resistant depression in Provo & Utah County. Strongest research evidence for PTSD/trauma. Accepting new patients. Call (385) 504-1334">
-    <meta name="keywords" content="Allen Psychiatry, ketamine therapy Utah, ketamine treatment Provo, ketamine for PTSD, ketamine for trauma, treatment-resistant depression, ketamine for depression, ketamine therapy Orem, ketamine treatment Utah County, PTSD treatment Utah, trauma treatment Utah, treatment-resistant depression Utah, ketamine infusion therapy, depression treatment Provo, innovative mental health treatment, Allen Mental Health">
+    
+    <!-- Separate Keyword Tags for Better SEO -->
+    <meta name="keywords" content="ketamine for PTSD, ketamine PTSD treatment Utah, ketamine trauma therapy, PTSD treatment Provo, trauma treatment Utah County">
+    <meta name="keywords" content="ketamine for depression, treatment-resistant depression Utah, ketamine depression therapy Provo">
+    <meta name="keywords" content="ketamine therapy Utah, ketamine treatment Provo, Allen Psychiatry, ketamine therapy Orem, ketamine treatment Utah County">
     <meta name="author" content="Dr. Todd Allen, Allen Psychiatry">
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
