Clarify FDA/Spravato link: Add educational note distinguishing esketamine (Spravato) from general ketamine therapy

--- a/ketamine-therapy.html
+++ b/ketamine-therapy.html
@@ -219,7 +219,7 @@
                     
                     <h3>Depression (Well-Established Evidence)</h3>
                     <ul>
-                        <li><a href="https://www.fda.gov/news-events/press-announcements/fda-approves-new-nasal-spray-medication-treatment-resistant-depression-available-only-certified" target="_blank" rel="noopener noreferrer">Official announcement regarding esketamine (Spravato) for treatment-resistant depression</a> (opens in new tab)</li>
+                        <li><a href="https://www.fda.gov/news-events/press-announcements/fda-approves-new-nasal-spray-medication-treatment-resistant-depression-available-only-certified" target="_blank" rel="noopener noreferrer">FDA announcement: Esketamine (Spravato) approval for treatment-resistant depression</a> (opens in new tab) - <em>Note: This refers to esketamine/Spravato specifically, not ketamine therapy in general. This information is provided for educational purposes only.</em></li>
                         <li>Multiple randomized controlled trials demonstrating response rates in treatment-resistant cases</li>
                         <li>Clinical trials evaluating ketamine and esketamine for depression treatment</li>
                     </ul>
