Fix broken FDA link: Remove 404 link, replace with factual statement and add JAMA Psychiatry consensus link

--- a/ketamine-therapy.html
+++ b/ketamine-therapy.html
@@ -219,9 +219,10 @@
                     
                     <h3>Depression (Well-Established Evidence)</h3>
                     <ul>
-                        <li><a href="https://www.fda.gov/news-events/press-announcements/fda-approves-new-nasal-spray-medication-treatment-resistant-depression-available-only-certified" target="_blank" rel="noopener noreferrer">FDA announcement: Esketamine (Spravato) approval for treatment-resistant depression</a> (opens in new tab) - <em>Note: This refers to esketamine/Spravato specifically, not ketamine therapy in general. This information is provided for educational purposes only.</em></li>
+                        <li>Esketamine (Spravato) received FDA approval in 2019 for treatment-resistant depression. <em>Note: This refers to esketamine/Spravato specifically, not ketamine therapy in general. This information is provided for educational purposes only.</em></li>
                         <li>Multiple randomized controlled trials demonstrating response rates in treatment-resistant cases</li>
                         <li>Clinical trials evaluating ketamine and esketamine for depression treatment</li>
+                        <li><a href="https://jamanetwork.com/journals/jamapsychiatry/article-abstract/2605202" target="_blank" rel="noopener noreferrer">JAMA Psychiatry: Consensus Statement on Ketamine in Treatment of Mood Disorders</a> (opens in new tab)</li>
                     </ul>
                     
                     <h3>Anxiety Disorders (Emerging Evidence)</h3>
