--- a/index.html
+++ b/index.html
@@ -81,7 +81,10 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
       gtag('config', 'G-LKYXFGGJSP', {
-        'send_page_view': false
+        'send_page_view': false,
+        'page_title': document.title,
+        'page_location': window.location.href,
+        'page_path': window.location.pathname
       });
       
       // Load GA script after page load to prevent render blocking
@@ -92,7 +95,11 @@
         document.head.appendChild(script);
         
         script.onload = function() {
-          gtag('event', 'page_view');
+          gtag('event', 'page_view', {
+            'page_title': document.title,
+            'page_location': window.location.href,
+            'page_path': window.location.pathname
+          });
         };
       });
     </script>
