--- a/index.html
+++ b/index.html
@@ -92,7 +92,22 @@
         document.head.appendChild(script);
         
         script.onload = function() {
-          gtag('event', 'page_view');
+          // Send page_view with all required parameters
+          gtag('event', 'page_view', {
+            'page_title': document.title,
+            'page_location': window.location.href,
+            'page_path': window.location.pathname
+          });
+        };
+        
+        // Fallback: Send page_view even if script fails to load
+        script.onerror = function() {
+          // Still try to send page_view via dataLayer
+          gtag('event', 'page_view', {
+            'page_title': document.title,
+            'page_location': window.location.href,
+            'page_path': window.location.pathname
+          });
         };
       });
     </script>
