SEO: Update all title tags and meta descriptions (40-60 char limit)
Updated all 10 pages with optimized titles and meta descriptions:
- All titles within 40-60 character limit
- 'Accepting New Patients' in all meta descriptions
- Key differentiators in titles (Treatment-Resistant, Rural, etc.)
- Professional tone maintained
- Credentials in About page title
- No data loss - all content, scripts, tracking preserved

Pages updated:
- Homepage: Psychiatrist Provo & Orem Utah
- ADHD: ADHD Testing & Treatment Provo Utah
- Depression: Depression Treatment Provo Utah | Treatment-Resistant
- Anxiety: Anxiety Treatment Provo Utah
- PTSD: PTSD & Trauma Treatment Provo Utah
- Ketamine: Ketamine Therapy Info Utah | Educational Resource
- Rural: Rural Mental Health Utah | Telehealth Farming
- Telehealth: Telehealth Psychiatry Utah | Online Mental Health
- Provo Offices: Provo Psychiatry Office Locations | In-Person Care
- About: About Todd Allen DNP PMHNP-BC | Psychiatric NP

--- a/anxiety.html
+++ b/anxiety.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Primary Meta Tags -->
-    <title>Anxiety Treatment Provo UT | Dr. Todd Allen | Allen Psychiatry</title>
-    <meta name="title" content="Anxiety Treatment Provo UT | Dr. Todd Allen | Allen Psychiatry">
-    <meta name="description" content="Expert anxiety treatment in Provo, UT. Dr. Todd Allen provides comprehensive care for anxiety disorders, including social anxiety, panic attacks, and generalized anxiety. Schedule today.">
+    <title>Anxiety Treatment Provo Utah | Allen Psychiatry</title>
+    <meta name="title" content="Anxiety Treatment Provo Utah | Allen Psychiatry">
+    <meta name="description" content="Professional anxiety treatment serving Provo, Orem, Lehi & rural Utah. Accepting new patients. GAD, social anxiety, panic disorder care. Telehealth available. Schedule appointment.">
     <meta name="keywords" content="Allen Psychiatry, Allen Mental Health, anxiety treatment Provo, anxiety therapy Orem, anxiety treatment Lehi, anxiety therapy Spanish Fork, anxiety treatment American Fork, anxiety therapy Springville, anxiety treatment Pleasant Grove, anxiety therapy Payson, anxiety treatment Saratoga Springs, anxiety therapy Eagle Mountain, anxiety treatment Utah County, panic disorder therapy, social anxiety treatment, generalized anxiety support, mental health clinic near me, psychiatric services Utah County, anxiety treatment Sevier County, rural anxiety treatment Utah, mental health treatment, psychiatric evaluation, mental wellness, behavioral health, compassionate mental health care, mental health support, medication management, mental health counseling, psychiatric consultation, Provo mental health, Orem mental health, Lehi mental health, Spanish Fork mental health, American Fork mental health, Springville mental health, Pleasant Grove mental health, Payson mental health, Saratoga Springs mental health, Eagle Mountain mental health, Utah County psychiatric care">
     <meta name="author" content="Dr. Todd Allen, Allen Psychiatry">
     <meta name="robots" content="index, follow">
