--- a/depression.html
+++ b/depression.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Primary Meta Tags -->
-    <title>Depression Treatment Provo | Treatment-Resistant Depression | Ketamine Therapy | Accepting New Patients</title>
-    <meta name="title" content="Depression Treatment Provo | Treatment-Resistant Depression | Ketamine Therapy | Accepting New Patients">
-    <meta name="description" content="Expert depression treatment in Provo, UT. Treatment-resistant depression care with ketamine therapy. Comprehensive evaluation and medication management. Accepting new patients. Schedule today.">
+    <title>Depression Treatment Provo Utah | Treatment-Resistant</title>
+    <meta name="title" content="Depression Treatment Provo Utah | Treatment-Resistant">
+    <meta name="description" content="Expert depression treatment in Provo & Utah County. Accepting new patients. Treatment-resistant depression care, medication management, therapy. Telehealth for rural areas. Call us.">
     <meta name="keywords" content="Allen Psychiatry, Allen Mental Health, depression treatment Provo, depression therapy Orem, depression treatment Lehi, depression therapy Spanish Fork, depression treatment American Fork, depression therapy Springville, depression treatment Pleasant Grove, depression therapy Payson, depression treatment Saratoga Springs, depression therapy Eagle Mountain, depression treatment Utah County, major depressive disorder, depression medication management, mental health clinic near me, psychiatric services Utah County, depression treatment Sevier County, rural depression treatment Utah, mental health treatment, psychiatric evaluation, mental wellness, behavioral health, compassionate mental health care, mental health support, medication management, mental health counseling, psychiatric consultation, Provo mental health, Orem mental health, Lehi mental health, Spanish Fork mental health, American Fork mental health, Springville mental health, Pleasant Grove mental health, Payson mental health, Saratoga Springs mental health, Eagle Mountain mental health, Utah County psychiatric care">
     <meta name="author" content="Dr. Todd Allen, Allen Psychiatry">
     <meta name="robots" content="index, follow">
