--- a/ketamine-therapy.html
+++ b/ketamine-therapy.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Primary Meta Tags -->
-    <title>Ketamine Therapy Utah | PTSD & Trauma Treatment | Treatment-Resistant Depression | Allen Psychiatry</title>
-    <meta name="title" content="Ketamine Therapy Utah | PTSD & Trauma Treatment | Treatment-Resistant Depression | Allen Psychiatry">
-    <meta name="description" content="Ketamine therapy for PTSD, trauma, and treatment-resistant depression in Provo & Utah County. Strongest research evidence for PTSD/trauma. Accepting new patients. Call (385) 504-1334">
+    <title>Ketamine Therapy Info Utah | Educational Resource</title>
+    <meta name="title" content="Ketamine Therapy Info Utah | Educational Resource">
+    <meta name="description" content="Educational information about ketamine therapy for treatment-resistant depression, PTSD & anxiety. Consult Dr. Allen to discuss. Research-based resource.">
     
     <!-- Separate Keyword Tags for Better SEO -->
     <meta name="keywords" content="ketamine for PTSD, ketamine PTSD treatment Utah, ketamine trauma therapy, PTSD treatment Provo, trauma treatment Utah County">
