--- a/provo.html
+++ b/provo.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Visit our Provo, UT offices for compassionate and expert mental health care. Dr. Todd Allen offers ADHD treatment, anxiety therapy, and more in welcoming environments.">
+    <meta name="description" content="Two Provo office locations for in-person psychiatric care. Accepting new patients. Comfortable, private spaces near UVU & Utah Valley Hospital. Free parking. Schedule visit today.">
     <meta name="keywords" content="Allen Psychiatry, Allen Mental Health, Provo psychiatrist, Provo mental health, psychiatric services Provo, mental health clinic Provo, psychiatrist near me Provo, mental health care Provo, ADHD treatment Provo, anxiety treatment Provo, depression treatment Provo, PTSD treatment Provo, psychiatric evaluation Provo, medication management Provo, mental health counseling Provo, psychiatric consultation Provo, mental wellness Provo, behavioral health Provo, compassionate mental health care, Utah County psychiatric care, local psychiatrist Provo">
-    <title>Provo Offices - Allen Psychiatry</title>
+    <title>Provo Psychiatry Office Locations | In-Person Care</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
