--- a/rural.html
+++ b/rural.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Allen Psychiatry offers expert mental health services to rural communities in Utah, including Duchesne, Uintah, and Sevier Counties. Access quality care through telehealth appointments.">
+    <meta name="description" content="Mental health care for rural Utah farming & ranching communities. Accepting new patients. Serving Sevier, Sanpete Counties. Flexible telehealth. Understanding agricultural life.">
     <meta name="keywords" content="Allen Psychiatry, Allen Mental Health, rural mental health Utah, rural psychiatric services, telehealth psychiatry Utah, Sevier County psychiatric care, Richfield mental health, Monroe mental health, Salina mental health, Elsinore mental health, Koosharem mental health, Sigurd mental health, Glenwood mental health, Aurora mental health, Redmond mental health, Central Valley mental health, Annabella mental health, Joseph mental health, rural mental health services, telehealth mental health, remote psychiatric care, mental health treatment rural Utah, psychiatric services rural communities, compassionate mental health care, mental wellness rural Utah, behavioral health rural, psychiatric evaluation telehealth, medication management telehealth">
-    <title>Rural Services - Allen Psychiatry</title>
+    <title>Rural Mental Health Utah | Telehealth Farming</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
