--- a/telehealth.html
+++ b/telehealth.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Telepsychiatry Utah | Online Psychiatrist | Rural Mental Health. Accepting new patients. Secure online psychiatric care throughout Utah. Expert telepsychiatry for depression, anxiety, ADHD. Call (385) 504-1334" />
+    <meta name="description" content="Online psychiatry throughout Utah. Accepting new patients. Secure video appointments from home. Full psychiatric evaluations, medication management, therapy. Convenient & private." />
     <meta name="keywords" content="Allen Psychiatry, telepsychiatry Utah, online psychiatrist, telehealth psychiatry Utah, online mental health appointments, virtual psychiatric services, telehealth mental health, remote psychiatric care, online therapy Utah, virtual mental health care, telehealth ADHD treatment, telehealth anxiety treatment, telehealth depression treatment, telehealth PTSD treatment, online psychiatric evaluation, telehealth medication management, mental health counseling online, psychiatric consultation telehealth, mental wellness telehealth, behavioral health telehealth, compassionate mental health care, secure telehealth, convenient mental health care, mental health treatment telehealth, rural mental health Utah">
-    <title>Telepsychiatry Utah | Online Psychiatrist | Rural Mental Health | Accepting New Patients | Allen Psychiatry</title>
+    <title>Telehealth Psychiatry Utah | Online Mental Health</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
