SEO: Implement 3 title tag optimizations for maximum search volume
1. Provo Offices: 'Provo Psychiatry Office | Mental Health Near Me' (51 chars)
   - Adds 'Near Me' = 8,100+ monthly searches (MASSIVE opportunity)
   - Better local search intent

2. Homepage: 'Psychiatrist Provo Orem & Rural Utah | Allen Psychiatry' (59 chars)
   - Adds 'Rural Utah' differentiator (competitive advantage)
   - Emphasizes unique value proposition

3. About: 'About Todd Allen DNP PMHNP-BC | Psychiatrist Provo Utah' (59 chars)
   - Adds location for better local SEO
   - Uses available character space

Expected impact: +10,600+ potential monthly searches
All changes within 40-60 character limit

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Todd Allen DNP PMHNP-BC | Psychiatric NP</title>
+    <title>About Todd Allen DNP PMHNP-BC | Psychiatrist Provo Utah</title>
     <meta name="description" content="Meet Dr. Todd Allen, DNP, PMHNP-BC. Board-certified psychiatric nurse practitioner serving Utah County & rural communities. Accepting new patients. ADHD specialist. Compassionate care.">
     <meta name="keywords" content="Allen Psychiatry, Allen Mental Health, Dr. Todd Allen, board-certified psychiatrist Provo, psychiatrist Utah County, mental health professional, psychiatric services Provo, mental health care Utah, compassionate mental health care, personalized psychiatric care, mental health treatment, psychiatric evaluation, mental wellness, behavioral health, Provo mental health, Orem mental health, Lehi mental health, Spanish Fork mental health, American Fork mental health, Springville mental health, Pleasant Grove mental health, Payson mental health, Saratoga Springs mental health, Eagle Mountain mental health, Utah County psychiatric care, Sevier County psychiatric care, rural mental health Utah">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
