Security: Add IP anonymization to GA4 and document analytics setup
Added:
- IP anonymization to GA4 config (privacy best practice)
- Comprehensive documentation for Cloudflare Insights + GA4 setup
- Security best practices verification
- Analytics comparison and recommendations

Both Cloudflare Insights and GA4 now configured with:
- Proper CSP allowances
- Security headers
- Privacy settings (IP anonymization)
- Best practices for dual analytics setup

--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
       gtag('config', 'G-LKYXFGGJSP', {
-        'send_page_view': false
+        'send_page_view': false,
+        'anonymize_ip': true
       });
       
       // Load GA script after page load
